# clarity-frame

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
docs/: debug-kiosk.md  google-photos-setup.md
native/: CMakeLists.txt  build.sh  drm_test.cpp  framebuffer.cpp  main.cpp  pi_test.cpp  simple_test.cpp
scripts/: clarity-frame-kiosk.service  google-photos-sync.js  install-kiosk.js  kiosk-manager.js
src/: config.js  pi-install.js  server.js
src/public/: index.html  style.css
src/public/fonts/: inter.css
